# cricket

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CppADCodeGen.patch  Dockerfile  README.md  environment.yaml  fetch.json  fk_template.hh  fkcc_gen.cc  panda.json  path.py  run.sh  test.cc  test.py  test2.cc  test3.cc  test4.cc  ur5.json
resources/: baxter.json  xarm6.json
resources/fetch/: problems.json  problems.pkl
resources/panda/: problems.pkl
resources/templates/: fk_template.hh
resources/ur10e/: ur_10e_spherized.urdf
resources/ur5/: ur5_spherized.urdf
resources/xarm6/: xarm6.srdf  xarm6_spherized.urdf
src/: fkcc_gen.cc
